--- a/lib/app_web/components/layouts/app.html.heex
+++ b/lib/app_web/components/layouts/app.html.heex
@@ -13,7 +13,7 @@
       />
 
       <a href="#main-content" class="sr-only focus:not-sr-only text-white dark:text-black">
-        Skip to main content
+        {gettext("Skip to main content")}
       </a>
 
       <%!-- dark mode --%>
@@ -72,12 +72,12 @@
 
   <.footer
     year={2025}
-    brand="Cuesphere"
+    brand={gettext("Cuesphere")}
     brand_link="/"
     links={[
-      %{label: "About", href: "/about"},
-      %{label: "Privacy Policy", href: "/privacy-policy"},
-      %{label: "Licensing", href: "/licensing"}
+      %{label: gettext("About"), href: "/about"},
+      %{label: gettext("Privacy Policy"), href: "/privacy-policy"},
+      %{label: gettext("Licensing"), href: "/licensing"}
     ]}
   />
 </div>
