--- a/lib/app_web/controllers/message_html/index.html.heex
+++ b/lib/app_web/controllers/message_html/index.html.heex
@@ -11,16 +11,16 @@
 
 
 <.table id="messages" rows={@messages} row_click={&JS.navigate(~p"/messages/#{&1}")}>
-  <:col :let={message} label={gettext("Email")}><span class="dark:text-white">{message.email}</span></:col>
-  <:col :let={message} label={gettext("Subject")}><span class="dark:text-white">{message.subject}</span></:col>
-  <:col :let={message} label={gettext("Message")}><span class="dark:text-white">{message.message}</span></:col>
+  <:col :let={message} label={gettext("Email")}><span class="text-black dark:text-white">{message.email}</span></:col>
+  <:col :let={message} label={gettext("Subject")}><span class="text-black dark:text-white">{message.subject}</span></:col>
+  <:col :let={message} label={gettext("Message")}><span class="text-black dark:text-white">{message.message}</span></:col>
   <:action :let={message}>
     <div class="sr-only">
-      <.link navigate={~p"/messages/#{message}"} class="dark:text-white">{gettext("Show")}</.link>
+      <.link navigate={~p"/messages/#{message}"} class="text-black dark:text-white">{gettext("Show")}</.link>
     </div>
   </:action>
   <:action :let={message}>
-    <.link href={~p"/messages/#{message}"} method="delete" data-confirm={gettext("Are you sure?")} class="dark:text-white">
+    <.link href={~p"/messages/#{message}"} method="delete" data-confirm={gettext("Are you sure?")} class="text-black dark:text-white">
       {gettext("Delete")}
     </.link>
   </:action>
