--- a/lib/app_web/components/layouts/app.html.heex
+++ b/lib/app_web/components/layouts/app.html.heex
@@ -3,12 +3,12 @@
     <div class="container mx-auto flex justify-between items-center">
       <img
         src={~p"/images/final/cuesphere-dark.png"}
-        alt={gettext("Cuesphere Logo")}
+        alt={gettext("Cue Sphere Logo")}
         class="w-40 h-auto object-contain block dark:hidden"
       />
       <img
         src={~p"/images/final/cuesphere-light.png"}
-        alt={gettext("Cuesphere Logo")}
+        alt={gettext("Cue Sphere Logo")}
         class="w-40 h-auto object-contain hidden dark:block"
       />
 
@@ -72,7 +72,7 @@
 
   <.footer
     year={2025}
-    brand={gettext("Cuesphere")}
+    brand={gettext("Cue Sphere")}
     brand_link={~p"/"}
     links={[
       %{label: gettext("About"), href: ~p"/about"},
