--- a/lib/app_web/controllers/message_html/new.html.heex
+++ b/lib/app_web/controllers/message_html/new.html.heex
@@ -5,7 +5,7 @@
     </div>
   <:subtitle>
     <div class="dark:text-white">
-      {gettext("Use this form to manage message records in your database.")}
+      {gettext("Use this form to leave feedback on Cue Sphere.")}
     </div>
   <br>
   </:subtitle>
