--- a/lib/app_web/controllers/message_html/show.html.heex
+++ b/lib/app_web/controllers/message_html/show.html.heex
@@ -1,6 +1,6 @@
 <.header>
   {gettext("Message")} {@message.id}
-  <:subtitle>{gettext("This is a message record from your database.")}</:subtitle>
+  <:subtitle>{gettext("This is a piece of feedback on Cue Sphere.")}</:subtitle>
 </.header>
 
 <.list>
